# compiler

./: README.md  lune.cabal
app/: Main.hs
app/Compiler/: Arrange.hs  Desugar.hs  Error.hs  Generate.hs  Infer.hs  Parse.hs  Propagate.hs  Unalias.hs
app/Document/: Generate.hs
app/Syntax/: Common.hs  Desugared.hs  Frontend.hs  Inferred.hs  Propagated.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
