cabal-version: 2.4
name:          lune
version:       0.1.0.0

author:     UnaryPlus
maintainer: ombspring@gmail.com

extra-source-files: README.md

executable lune
    main-is: Main.hs

    other-modules:
      Syntax.Frontend,
      Syntax.Desugared,
      Syntax.Propagated,
      Syntax.Inferred,
      Syntax.Common,
      Compiler.Parse,
      Compiler.Desugar,
      Compiler.Arrange,
      Compiler.Unalias,
      Compiler.Propagate,
      Compiler.Infer,
      Compiler.Generate,
      Compiler.Error,
      Document.Generate

    build-depends:
      base ^>=4.14.1.0,
      parsec,
      containers,
      mtl,
      lens,
      directory,
      process,
      filepath

    ghc-options:      -Wall
    hs-source-dirs:   app
    default-language: Haskell2010
